# streamvizzard

./: .gitignore  docker-compose.yml  readme.md
Backend/: pyproject.toml  readme.md
Backend/src/: cli.py  config.py  main.py  streamVizzard.py
Backend/src/analysis/costModel/: costModel.py  costModelAnalysis.py  operatorEntry.py
Backend/src/analysis/costModel/calculator/: genericCC.py  polynomialCC.py
Backend/src/analysis/costModel/configurations/: dataCleaningConf.py  imageProcessingConf.py
Backend/src/network/: server.py  socketTuple.py
Backend/src/network/commands/: commands.py  debuggerCmds.py  pipelineCmds.py
Backend/src/spe/common/: dataType.py  iEventEmitter.py  preciseEvent.py  runtimeService.py  tuple.py
Backend/src/spe/common/serialization/: jsonSerialization.py
Backend/src/spe/pipeline/: connection.py  pipeline.py  pipelineManager.py  pipelineParser.py  pipelineUpdates.py  socket.py
Backend/src/spe/pipeline/operators/: module.py  operator.py  operatorDB.py  sink.py  source.py
Backend/src/spe/pipeline/optimization/: clustering.py
Backend/src/spe/runtime/: runtimeCommunicator.py  runtimeManager.py
Backend/src/spe/runtime/advisor/: advisorSuggestion.py  pipelineAdvisor.py
Backend/src/spe/runtime/compiler/: compileDB.py  pipelineCompiler.py
Backend/src/spe/runtime/debugger/: debugMethods.py  debugStep.py  debugTuple.py  debuggingUtils.py  operatorDebugger.py  pipelineDebugger.py
Backend/src/spe/runtime/monitor/: connectionMonitor.py  dataInspect.py  dataProtocol.py  operatorMonitor.py  operatorMonitorData.py  operatorMonitorStatistics.py  operatorMonitorTuple.py  pipelineDataAnalyzer.py  pipelineMonitor.py
Backend/src/spe/runtime/simulation/: pipelineSimulation.py  simulationDummyData.py  simulationTick.py
Backend/src/spe/runtime/structures/: eventListener.py  iEventEmitter.py  stream.py  timer.py  tuple.py
Backend/src/utils/: messages.py  preciseEvent.py  utils.py
Frontend/: README.md  package.json  readme.md
(+439 files in other folders)
